more spacing issues and no more fixed nav for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@
 }
 
 body {
+	margin: 0;
 	position: relative;
-	padding-top: 250px;
 	font-family: cronos;
 	font-size: 1.9em;
 	min-height: 100vh;
@@ -67,8 +67,14 @@ td:last-child {
 	border-left: solid 1px rgba(255,255,255,0.2);
 }
 
-#navbar {
+#navbar1, #navbar2 {
+	margin: 0;
+	padding: 0;
 	width: 100%;
+}
+
+.nav {
+	padding: 0;
 }
 
 nav a {
